--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.4.0",
-    "next": "11.1.0",
+    "next": "^12.1.6",
     "next-themes": "^0.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
